# maturin_cargo_build_repro

./: Cargo.toml  Makefile  pyproject.toml
python/maturin_cargo_build_repro/: __init__.py
python/tests/: test_all.py
src/: impl_mod.rs  lib.rs
