[package]
name = "maturin_cargo_build_repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_cargo_build_repro"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.21.1"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
tempdir = "0.3.7"
